fix overflow && add syntax highlighter with custom theme

--- a/frontend/frontend-dev/src/index.css
+++ b/frontend/frontend-dev/src/index.css
@@ -10,13 +10,38 @@ html {
   @variants responsive {
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
-        display: none;
+      display: none;
     }
 
     /* Hide scrollbar for IE, Edge and Firefox */
     .no-scrollbar {
-        -ms-overflow-style: none;  /* IE and Edge */
-        scrollbar-width: none;  /* Firefox */
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+
+    /* width */
+    .compact-scrollbar ::-webkit-scrollbar {
+      width: 0.5rem;
+      height: 0.5rem;
+    }
+
+    /* Track */
+    .compact-scrollbar ::-webkit-scrollbar-track {
+      border-radius: 0.25rem;
+      background: #cccccc50;
+    }
+
+    /* Handle */
+    .compact-scrollbar ::-webkit-scrollbar-thumb {
+      background: #808080;
+      border-radius: 100vh;
+      border: 0.125rem solid #cccccc50 outer;
+      opacity: 0.5;
+    }
+
+    /* Handle on hover */
+    .compact-scrollbar ::-webkit-scrollbar-thumb:hover {
+      opacity: 1;
     }
   }
 }
